[maven-release-plugin] prepare release v0.0.1

--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -11,7 +10,7 @@
 
 	<groupId>org.sevensource.wro4spring</groupId>
 	<artifactId>wro4spring-thymeleaf-dialect</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<packaging>jar</packaging>
 
 	<name>Thymeleaf Dialect for use with wro4spring</name>
@@ -42,7 +41,7 @@
 		<url>http://github.com/sevensource/wro4spring-thymeleaf-dialect</url>
 		<connection>scm:git:git@github.com:sevensource/wro4spring-thymeleaf-dialect.git</connection>
 		<developerConnection>scm:git:git@github.com:sevensource/wro4spring-thymeleaf-dialect.git</developerConnection>
-		<tag>HEAD</tag>
+		<tag>v0.0.1</tag>
 	</scm>
 
 	<licenses>
