--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.sevensource.parents</groupId>
 		<artifactId>parent-servlet</artifactId>
-		<version>0.9.11</version>
+		<version>0.9.12</version>
 	</parent>
 
 
@@ -19,13 +19,13 @@
 		<dependency>
 			<groupId>org.sevensource</groupId>
 			<artifactId>wro4spring</artifactId>
-			<version>0.0.2</version>
+			<version>0.0.3-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.sevensource</groupId>
 			<artifactId>thymeleaf4spring</artifactId>
-			<version>0.0.2</version>
+			<version>0.0.3-SNAPSHOT</version>
 			<optional>true</optional>
 		</dependency>
 	</dependencies>
